// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <PatientsSummary /> should renders with Disclaimer Modal correctly 1`] = `
<section
  className="page-wrapper"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={12}
    >
      <div
        className="panel panel-primary panel-dashboard"
      >
        <PatientsSummaryListHeader
          feeds={Array []}
          onCategorySelected={[Function]}
          onViewOfBoardsSelected={[Function]}
          selectedCategory={
            Object {
              "allergies": true,
              "contacts": true,
              "medications": true,
              "problems": true,
            }
          }
          selectedViewOfBoards={
            Object {
              "full": true,
              "list": false,
              "preview": false,
            }
          }
          title="Patient Summary"
        />
        <div
          className="panel-body"
        >
          <div
            className="dashboard"
          >
            <SimpleDashboardPanel
              goToState={[Function]}
              isFeeds={false}
              isHasList={true}
              isHasPreview={true}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="0"
              srcPrevirew={null}
              state="diagnoses"
              title="Problems / Diagnosis"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              isFeeds={false}
              isHasList={true}
              isHasPreview={true}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="1"
              srcPrevirew={null}
              state="contacts"
              title="Contacts"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              isFeeds={false}
              isHasList={true}
              isHasPreview={true}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="2"
              srcPrevirew={null}
              state="allergies"
              title="Allergies"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              isFeeds={false}
              isHasList={true}
              isHasPreview={true}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="3"
              srcPrevirew={null}
              state="medications"
              title="Medications"
            />
          </div>
        </div>
      </div>
    </Col>
  </Row>
  <ConfirmationModal
    isShow={true}
    isShowCancelButton={false}
    isShowOkButton={true}
    onHide={[Function]}
    onOk={[Function]}
    textCancelButton="Cancel"
    textOkButton="Ok"
    title="Notification"
  >
    <span>
      You was redirected to your home page because you are logged in as a PHR user.
    </span>
  </ConfirmationModal>
</section>
`;

exports[`Component <PatientsSummary /> should renders with all props correctly 1`] = `
<section
  className="page-wrapper"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      xs={12}
    >
      <div
        className="panel panel-primary panel-dashboard"
      >
        <PatientsSummaryListHeader
          feeds={Array []}
          onCategorySelected={[Function]}
          onViewOfBoardsSelected={[Function]}
          selectedCategory={
            Object {
              "allergies": true,
              "contacts": true,
              "medications": true,
              "problems": true,
            }
          }
          selectedViewOfBoards={
            Object {
              "full": true,
              "list": false,
              "preview": false,
            }
          }
          title="Patient Summary"
        />
        <div
          className="panel-body"
        >
          <div
            className="dashboard"
          >
            <SimpleDashboardPanel
              goToState={[Function]}
              isFeeds={false}
              isHasList={true}
              isHasPreview={false}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="0"
              srcPrevirew={null}
              state="diagnoses"
              title="Problems / Diagnosis"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              isFeeds={false}
              isHasList={true}
              isHasPreview={false}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="1"
              srcPrevirew={null}
              state="contacts"
              title="Contacts"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              isFeeds={false}
              isHasList={true}
              isHasPreview={false}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="2"
              srcPrevirew={null}
              state="allergies"
              title="Allergies"
            />
            <SimpleDashboardPanel
              goToState={[Function]}
              isFeeds={false}
              isHasList={true}
              isHasPreview={false}
              items={
                Array [
                  Object {
                    "text": "Loading ...",
                  },
                  "",
                  "",
                  "",
                ]
              }
              key="3"
              srcPrevirew={null}
              state="medications"
              title="Medications"
            />
          </div>
        </div>
      </div>
    </Col>
  </Row>
</section>
`;
